# bazel-transitions_dep_resolution_example

./: BUILD.bazel  README.md  defs.bzl  flake.nix
